--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,13 @@
         <div class='form-group'>
           <label for='subscribe-email-signin' class='u-hidden-visually'>Your email address</label>
           <input type='email' name='email' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your email address' required data-members-email>
-          <button type='submit' class='c-btn c-btn--action c-subscribe-form__btn'>Send login link</button>
         </div>
+        
+        <div class='form-group'>
+          <label for='subscribe-email-signin' class='u-hidden-visually'>Your Password</label>
+          <input type='password' name='password' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Password' required data-members-email>
+        </div>
+        
 
         <div class='c-alert c-alert--success'>Please check your inbox and click the link to complete the login.</div>
         <div class='c-alert c-alert--invalid'>Please enter a valid email address!</div>
