--- a/templates/detail.html
+++ b/templates/detail.html
@@ -11,12 +11,12 @@
 			">
       <article class="c-post tag-design">
         <figure class="c-post-image-wrap">
-          <img alt="" class="c-post-image lazyload" />
+          <img alt="" class="c-post-image lazyload" src="{{ post.ImgUrl }}"/>
         </figure>
 
         <header class="c-post-header">
           <h1 class="c-post-header__title">
-            Title: Tech Companies Scaling Design
+            {{ post.title }}
           </h1>
           <div class="c-post-header__meta">
             <a href="../author/top/index.html" class="c-post-header__author">
@@ -25,8 +25,8 @@
                   height="32" />
               </div>
               <div class="c-post-header__author_info">
-                <div class="c-post-header__author_name">William James</div>
-                <time class="c-post-header__date" datetime="2019-10-16" title="16 October 2019">16 Oct 2019</time>
+                <div class="c-post-header__author_name">{{ post.user.username }}</div>
+                <time class="c-post-header__date" datetime="2019-10-16" title="16 October 2019">{{ post.date }}</time>
               </div>
             </a>
 
@@ -81,9 +81,7 @@
         </header>
         <section class="c-content">
           <p>
-            Accessibility is something I wasn’t taking seriously before and was
-            just reading some bits here and there without understanding and
-            seeing the big picture if using it sth.
+          {{ post.content }}
           </p>
         </section>
 
@@ -98,7 +96,7 @@
 
           <div class="c-card-author__content">
             <h3 class="c-card-author__name">
-              <a href="../author/top/index.html">William James</a>
+              <a href="../author/top/index.html">{{ post.user.username }}</a>
               <a href="https://twitter.com/aspirethemes" aria-label="Twitter" target="_blank" rel="noopener">
                 <div class="icon icon--ei-sc-twitter icon--s">
                   <svg class="icon__cnt">
@@ -115,7 +113,7 @@
             </h3>
 
             <p class="c-card-author__bio">
-              Lorem ipsum dolor sit amet, sit magna iracundia consectetuer.
+              {{ post.snippet }}
             </p>
           </div>
         </section>
@@ -137,48 +135,25 @@
         
         <div class="c-widget">
           <div class="c-title-bar">
-            <h3 class="c-title-bar__title">Featured Posts</h3>
+            <h3 class="c-title-bar__title">Recent Posts</h3>
           </div>
 
-          <a href="../everybody-listen-we-have-to-put-a-barrier-between-us-and-the-world/index.html" class="c-teaser">
+          {% for post in fposts %}
+          <a href="{% url 'detail' post.slug %}" class="c-teaser">
             <div class="c-teaser__content">
               <h3 class="c-teaser__title">
-                Put a barrier between us and the world!
+                {{ post.title }}
               </h3>
-              <time class="c-teaser__date" datetime="2017-03-27" title="27 March 2017">27 Mar 2017</time>
+              <time class="c-teaser__date" datetime="2017-03-27" title="27 March 2017">{{ post.date }}</time>
             </div>
             <div class="c-teaser__media">
               <img class="c-teaser__image lazyload" alt="Put a barrier between us and the world!"
-                data-src="/content/images/size/w160/2019/12/martin-widenka-61HdqMxX2lc-unsplash.jpg" width="88"
+                data-src="{{ post.ImgUrl }}" width="88"
                 height="72" />
             </div>
           </a>
-          <a href="../you-got-to-cool-that-shit-off-and-thats-the-double-truth-ruth/index.html" class="c-teaser">
-            <div class="c-teaser__content">
-              <h3 class="c-teaser__title">
-                And that&#x27;s the double-truth, Ruth
-              </h3>
-              <time class="c-teaser__date" datetime="2015-12-22" title="22 December 2015">22 Dec 2015</time>
-            </div>
-            <div class="c-teaser__media">
-              <img class="c-teaser__image lazyload" alt="And that&#x27;s the double-truth, Ruth"
-                data-src="/content/images/size/w160/2019/10/heather-ford-5gkYsrH_ebY-unsplash.jpg" width="88"
-                height="72" />
-            </div>
-          </a>
-          <a href="../eddie-kim-somehow-managed-to-fill-the-plane-with-poisonous-snakes/index.html" class="c-teaser">
-            <div class="c-teaser__content">
-              <h3 class="c-teaser__title">
-                Eddie Kim somehow managed to fill the snakes.
-              </h3>
-              <time class="c-teaser__date" datetime="2015-12-21" title="21 December 2015">21 Dec 2015</time>
-            </div>
-            <div class="c-teaser__media">
-              <img class="c-teaser__image lazyload" alt="Eddie Kim somehow managed to fill the snakes."
-                data-src="/content/images/size/w160/2019/10/angela-bailey-jlo7Bf4tUoY-unsplash-2.jpg" width="88"
-                height="72" />
-            </div>
-          </a>
+          {% endfor %}
+          
         </div>
       </div>
     </div>
