--- a/templates/detail.html
+++ b/templates/detail.html
@@ -19,21 +19,21 @@
             {{ post.title }}
           </h1>
           <div class="c-post-header__meta">
-            <a href="../author/top/index.html" class="c-post-header__author">
+            <a href="" class="c-post-header__author">
               <div class="c-post-header__author_media">
-                <img class="c-post-header__author_image lazyload" data-src="" alt="William James" width="32"
+                <img class="c-post-header__author_image lazyload" data-src="" alt="{{ post.user.username }}" width="32"
                   height="32" />
               </div>
               <div class="c-post-header__author_info">
                 <div class="c-post-header__author_name">{{ post.user.username }}</div>
-                <time class="c-post-header__date" datetime="2019-10-16" title="16 October 2019">{{ post.date }}</time>
+                <time class="c-post-header__date" datetime="{{ post.date }}" title="{{ post.date }}">{{ post.date }}</time>
               </div>
             </a>
 
             <ul class="c-share o-plain-list">
               <li class="c-share__item">
                 <a class="c-share__link" title="Share on Twitter" aria-label="Share on Twitter"
-                  href="https://twitter.com/share?text=Tech%20Companies%20Scaling%20Design&amp;url=https://krabi.aspirethemes.com/welcome-2/"
+                  href="https://twitter.com/share?text=Tech%20Companies%20Scaling%20Design&amp;url=https://{{ post.document.url }}"
                   onclick="window.open(this.href, 'twitter-share', 'width=550, height=235'); return false;">
                   <span data-icon="ei-sc-twitter" data-size="s" class="c-share__icon"></span>
                 </a>
@@ -41,38 +41,23 @@
 
               <li class="c-share__item">
                 <a class="c-share__link" title="Share on Facebook" aria-label="Share on Facebook"
-                  href="https://www.facebook.com/sharer/sharer.php?u=https://krabi.aspirethemes.com/welcome-2/"
+                  href="https://www.facebook.com/sharer/sharer.php?u=https://{{ post.document.url }}"
                   onclick="window.open(this.href, 'facebook-share', 'width=580, height=296'); return false;">
                   <span data-icon="ei-sc-facebook" data-size="s" class="c-share__icon"></span>
                 </a>
               </li>
 
-              <li class="c-share__item">
-                <a class="c-share__link" title="Share on LinkedIn" aria-label="Share on LinkedIn"
-                  href="https://www.linkedin.com/shareArticle?mini=true&amp;url=https://krabi.aspirethemes.com/welcome-2/&amp;title=Tech%20Companies%20Scaling%20Design"
-                  onclick="window.open(this.href, 'linkedin-share', 'width=580, height=296'); return false;">
-                  <span data-icon="ei-sc-linkedin" data-size="s" class="c-share__icon"></span>
-                </a>
-              </li>
-
-              <li class="c-share__item">
-                <a class="c-share__link" title="Share on Pinterest" aria-label="Share on Pinterest"
-                  href="http://pinterest.com/pin/create/button/?url=https://krabi.aspirethemes.com/welcome-2/&amp;media=https://krabi.aspirethemes.com/content/images/2020/11/united-nations-covid-19-response-EJrK0J8Jr7U-unsplash--1--2.jpg&amp;description=Tech%20Companies%20Scaling%20Design"
-                  onclick="window.open(this.href, 'pinterest-share', 'width=580, height=296'); return false;">
-                  <span data-icon="ei-sc-pinterest" data-size="s" class="c-share__icon"></span>
-                </a>
-              </li>
 
               <li class="c-share__item">
                 <a class="c-share__link" title="Share via Email" aria-label="Share via Email"
-                  href="mailto:?subject=Tech%20Companies%20Scaling%20Design&body=https://krabi.aspirethemes.com/welcome-2/">
+                  href="mailto:cutejosh2@gmail.com?subject={{ post.title }}&body={{ post.document.url }}">
                   <span data-icon="ei-envelope" data-size="s" class="c-share__icon"></span>
                 </a>
               </li>
 
               <li class="c-share__item">
-                <a class="c-share__link js-share__link--clipboard" title="Copy link" aria-label="Copy link" href="#"
-                  data-clipboard-text="index.html" onclick="return false;">
+                <a class="c-share__link js-share__link--clipboard" title="Link to file" aria-label="Download file" href="{{ post.document.url }}"
+                  data-clipboard-text="{{ post.document.url }}" onclick='https://'+"{{ post.document.url }}">
                   <span data-icon="ei-link" data-size="s" class="c-share__icon"></span>
                 </a>
               </li>
@@ -87,10 +72,10 @@
 
         <section class="c-card-author">
           <div class="c-card-author__media">
-            <a href="../author/top/index.html">
+            <a href="">
               <img class="c-card-author__image lazyload"
-                data-src="/content/images/size/w160/2020/11/guillaume-bleyer-Dep2HTKqGj0-unsplash-5.jpg"
-                alt="William James" width="80" height="80" />
+                data-src=""
+                alt="{{ post.user.username }}" width="80" height="80" />
             </a>
           </div>
 
@@ -144,10 +129,10 @@
               <h3 class="c-teaser__title">
                 {{ post.title }}
               </h3>
-              <time class="c-teaser__date" datetime="2017-03-27" title="27 March 2017">{{ post.date }}</time>
+              <time class="c-teaser__date" datetime="" title="">{{ post.date }}</time>
             </div>
             <div class="c-teaser__media">
-              <img class="c-teaser__image lazyload" alt="Put a barrier between us and the world!"
+              <img class="c-teaser__image lazyload" alt="{{ post.ImgUrl }}"
                 data-src="{{ post.ImgUrl }}" width="88"
                 height="72" />
             </div>
