payment works now

--- a/templates/login.html
+++ b/templates/login.html
@@ -23,6 +23,9 @@
           <label for='subscribe-email-signin' class='u-hidden-visually'>Your Password</label>
           <input type='password' name='password' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Password' required data-members-email>
         </div>
+        <div class='form-group'>
+          <button class="c-btn c-btn--small c-btn--action">Login</button>
+        </div>
         
 
         <div class='c-alert c-alert--success'>Please check your inbox and click the link to complete the login.</div>
