--- a/templates/register.html
+++ b/templates/register.html
@@ -17,15 +17,21 @@
   <div class='c-member-plans'>
     <div class='c-member-plan c-member-plan--free'>
       <header class='c-member-plan__header'>
-        <h2 class='c-member-plan__title'>Free</h2>
-        <strong class='c-member-plan__amount'>0</strong>
+        <h2 class='c-member-plan__title'>Weekly</h2>
+        <span class='c-member-plan__sign'>$</span>
+        <strong class='c-member-plan__amount'>10</strong>
       </header>
       <div class='c-member-plan__content'>
         <ul class='c-member-plan__list'>
           <li>Regular updates with new content</li>
           <li>Support independent publishing</li>
         </ul>
-        <a class='c-btn c-btn--action' href='../signup/index.html'>Choose this plan</a>
+        <form method="POST" action="{% url 'initiate-payment' %}" id='form' style="text-align: center;">
+        {% csrf_token %}
+        <input type='hidden' name='amount' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your email address' required value="10">
+        <button type="submit" class='c-btn c-btn--dark'>Choose this plan</button>
+        </form>
+        
       </div>
     </div>
 
@@ -33,7 +39,7 @@
     <header class='c-member-plan__header'>
       <h2 class='c-member-plan__title'>Monthly</h2>
       <span class='c-member-plan__sign'>$</span>
-      <strong class='c-member-plan__amount'>5</strong>
+      <strong class='c-member-plan__amount'>35</strong>
     </header>
     <div class='c-member-plan__content'>
       <ul class='c-member-plan__list'>
@@ -42,7 +48,11 @@
         <li>Support independent publishing</li>
         <li>Simple, secure card payment</li>
       </ul>
-      <a class='c-btn c-btn--dark' href='javascript:void(0)' data-members-plan='Monthly'>Choose this plan</a>
+      <form method="POST" action="{% url 'initiate-payment' %}" id='form' style="text-align: center;">
+        {% csrf_token %}
+        <input type='hidden' name='amount' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your email address' required value="35">
+        <button type="submit" class='c-btn c-btn--dark'>Choose this plan</button>
+        </form>
     </div>
   </div>
 
@@ -50,7 +60,7 @@
     <header class='c-member-plan__header'>
       <h2 class='c-member-plan__title'>Yearly</h2>
       <span class='c-member-plan__sign'>$</span>
-      <strong class='c-member-plan__amount'>20</strong>
+      <strong class='c-member-plan__amount'>359</strong>
     </header>
     <div class='c-member-plan__content'>
       <ul class='c-member-plan__list'>
@@ -60,12 +70,20 @@
         <li>Simple, secure card payment</li>
         <li>One easy payment instead of 12!</li>
       </ul>
-      <a class='c-btn c-btn--dark' href='javascript:void(0)' data-members-plan='Yearly'>Choose this plan</a>
+      <form method="POST" action="{% url 'initiate-payment' %}" id='form' style="text-align: center;">
+        {% csrf_token %}
+        <input type='hidden' name='amount' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your email address' required value="359">
+        <button type="submit" class='c-btn c-btn--dark'>Choose this plan</button>
+        </form>
     </div>
   </div>
 </div></div>
       </div>
     </main>
 
-    
+    <script>
+      function myfunc() {
+        document.getElementById('form').submt();
+      }
+    </script>
 {% endblock content %}
