--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,7 @@
 <div class='o-grid__col o-grid__col--center o-grid__col--3-4-m o-grid__col--2-3-l  o-grid__col--4-4-l '>
   <div class='c-archive'>
     <h1 class='c-archive__title'>Choose your subscription</h1>
-    <p class='c-archive__description'>Unlock full access to Krabi and see the entire library of members-only content &amp; updates.</p>
+    <p class='c-archive__description'>Unlock full access to Project viewer and see the entire library of members-only content &amp; updates.</p>
   </div>
 </div>
 
