--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -22,22 +22,22 @@
         <br>
         <div class='form-group'>
           <label for='subscribe-email-signin' class=''>Image:</label>
-          <input type='file' name='image' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Project Title' required data-members-email>
+          <input type='file' name='image' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='' required data-members-email>
         </div>
         <br>
         <div class='form-group'>
           <label for='subscribe-email-signin' class='u-hidden-visually'>Snippet</label>
-          <input type='text' name='snippet' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Project Title' required data-members-email>
+          <input type='text' name='snippet' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Snippet' required data-members-email>
         </div>
         <br>
         <div class='form-group'>
           <label for='subscribe-email-signin' class='u-hidden-visually'>Content</label>
-          <textarea type='text' name='content' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Project Title' required data-members-email></textarea>
+          <textarea type='text' name='content' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Project Content' required data-members-email></textarea>
         </div>
         <br>
         <div class='form-group'>
           <label for='subscribe-email-signin' class=''>Project Document:</label>
-          <input type='file' name='document' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Password' required data-members-email>
+          <input type='file' name='document' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Project Document' required data-members-email>
         </div>
         <button type="submit" class="c-btn c-btn--small c-btn--action">Post</button>
 
