--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
 							c-footer__section
 						"
 					>
-						<p class="c-footer__headline">Project Viewer</p>
+						<p class="c-footer__headline">Project Work</p>
 						<p class="u-type-md u-color-gray">View your projects</p>
 					</div>
 
@@ -64,7 +64,7 @@
 
 					<div class="o-grid__col o-grid__col--4-4-s c-footer__section">
 						<div class="u-type-xs c-footer__copyright">
-							&copy; 2021 Project Viewer
+							&copy; 2021 Project Work
 						</div>
 					</div>
 				</div>
