--- a/templates/register_.html
+++ b/templates/register_.html
@@ -42,11 +42,11 @@
         <br>
         <div class='form-group'>
           <label for='subscribe-email-signin' class='u-hidden-visually'>Your email address</label>
-          <input type='text' name='facebook' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your facebook profile link' required data-members-email>
+          <input type='text' name='facebook' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your facebook profile link' required>
         </div>
         <br>
         <div class='form-group'>
-          <label for='subscribe-email-signin' class='u-hidden-visually'>Your Picture</label>
+          <label for='subscribe-email-signin' class=''><p>Your Display Picture</p></label><br>
           <input type='file' name='pic' class='c-subscribe-form__input' id='subscribe-email-signin' placeholder='Your Picture' required data-members-email>
         </div>
         <br>
