--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
       	{% csrf_token %}
         <div class='form-group'>
           <label for='subscribe-email-signin' class='u-hidden-visually'>Project title</label>
-          <input type="text" id="form-input" aria-label="Search Project Work" class="input" placeholder="Type to Search" name="search" required>
+          <input type="text" id="form-input" aria-label="Search Project Work" class="input" placeholder="Search" name="search" required>
         </div>
         <button type="submit" class="c-btn c-btn--small c-btn--action">Search</button>	
       </form>
